--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "install": "^0.13.0",
+    "jose": "^6.1.0",
     "npm": "^11.6.2",
     "pai-shared-types": "^1.0.21",
     "passport": "^0.7.0",
