feat: internal_controller 추가

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ BCRYPT_SALT_ROUNDS="12"
 
 # Business Timezone
 BUSINESS_TZ="Asia/Seoul"
+
+# Redis Configuration
+REDIS_HOST="localhost"
+REDIS_PORT="6379"
+REDIS_PASSWORD=""
+REDIS_DB="0"
